:tada: Initial commit

--- a/src/scss/base/_initialize.scss
+++ b/src/scss/base/_initialize.scss
@@ -39,4 +39,4 @@ $iota-base-initialize-form-elements: false;
 $iota-base-initialize-html5-form-elements: false;
 
 
-@import 'node_modules/iotacss/base/initialize';
+@import '~iotacss/base/initialize';
