--- a/src/scss/objects/_container.scss
+++ b/src/scss/objects/_container.scss
@@ -53,4 +53,4 @@ $iota-objs-container-size-default: 1000px;
 $iota-objs-container-size-extra: ();
 
 
-@import 'node_modules/iotacss/objects/container';
+@import '~iotacss/objects/container';
