--- a/src/scss/objects/_grid.scss
+++ b/src/scss/objects/_grid.scss
@@ -78,4 +78,4 @@ $iota-objs-grid-align-top-name    : 'top';
 $iota-objs-grid-namespace         : 'grid';
 
 
-@import 'node_modules/iotacss/objects/grid';
+@import '~iotacss/objects/grid';
