--- a/src/scss/objects/_list.scss
+++ b/src/scss/objects/_list.scss
@@ -64,4 +64,4 @@ $iota-objs-list-inline-name : 'inline';
 $iota-objs-list-span-name   : 'span';
 
 
-@import 'node_modules/iotacss/objects/list';
+@import '~iotacss/objects/list';
