--- a/src/scss/objects/_media.scss
+++ b/src/scss/objects/_media.scss
@@ -86,4 +86,4 @@ $iota-objs-media-align-bottom-name  : 'bottom';
 $iota-objs-media-responsive-name    : 'res';
 
 
-@import 'node_modules/iotacss/objects/media';
+@import '~iotacss/objects/media';
