--- a/src/scss/objects/_type.scss
+++ b/src/scss/objects/_type.scss
@@ -16,4 +16,4 @@ $iota-objs-type-namespace: 'type-';
 $iota-objs-type-sizes: ();
 
 
-@import 'node_modules/iotacss/objects/type';
+@import '~iotacss/objects/type';
