--- a/src/scss/tools/_type.scss
+++ b/src/scss/tools/_type.scss
@@ -1,1 +1,5 @@
-@import 'node_modules/iotacss/tools/type';
+@import '~iotacss/tools/type';
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
