--- a/src/scss/utilities/_clearfix.scss
+++ b/src/scss/utilities/_clearfix.scss
@@ -7,4 +7,4 @@
 $iota-utils-clearfix-namespace: 'cf';
 
 
-@import 'node_modules/iotacss/utilities/clearfix';
+@import '~iotacss/utilities/clearfix';
