--- a/src/scss/utilities/_color.scss
+++ b/src/scss/utilities/_color.scss
@@ -16,4 +16,4 @@ $iota-utils-color-names: ();
 $iota-utils-color-namespace: 'color-';
 
 
-@import 'node_modules/iotacss/utilities/color';
+@import '~iotacss/utilities/color';
