--- a/src/scss/utilities/_display.scss
+++ b/src/scss/utilities/_display.scss
@@ -30,4 +30,4 @@ $iota-utils-display-inline-name       : 'inline';
 $iota-utils-display-inline-block-name : 'inline-block';
 
 
-@import 'node_modules/iotacss/utilities/display';
+@import '~iotacss/utilities/display';
