--- a/src/scss/utilities/_float.scss
+++ b/src/scss/utilities/_float.scss
@@ -29,4 +29,4 @@ $iota-utils-float-left-name   : 'left-';
 $iota-utils-float-right-name  : 'right-';
 
 
-@import 'node_modules/iotacss/utilities/float';
+@import '~iotacss/utilities/float';
