--- a/src/scss/utilities/_margin.scss
+++ b/src/scss/utilities/_margin.scss
@@ -51,4 +51,4 @@ $iota-utils-margin-vertical-name    : 'v';
 $iota-utils-margin-horizontal-name  : 'h';
 
 
-@import 'node_modules/iotacss/utilities/margin';
+@import '~iotacss/utilities/margin';
