--- a/src/scss/utilities/_padding.scss
+++ b/src/scss/utilities/_padding.scss
@@ -51,4 +51,4 @@ $iota-utils-padding-vertical-name    : 'v';
 $iota-utils-padding-horizontal-name  : 'h';
 
 
-@import 'node_modules/iotacss/utilities/padding';
+@import '~iotacss/utilities/padding';
