--- a/src/scss/utilities/_pull.scss
+++ b/src/scss/utilities/_pull.scss
@@ -44,4 +44,4 @@ $iota-utils-pull-res: false;
 $iota-utils-pull-breakpoints: $iota-global-breakpoints;
 
 
-@import 'node_modules/iotacss/utilities/pull';
+@import '~iotacss/utilities/pull';
