--- a/src/scss/utilities/_push.scss
+++ b/src/scss/utilities/_push.scss
@@ -44,4 +44,4 @@ $iota-utils-push-res: false;
 $iota-utils-push-breakpoints: $iota-global-breakpoints;
 
 
-@import 'node_modules/iotacss/utilities/push';
+@import '~iotacss/utilities/push';
