--- a/src/scss/utilities/_size.scss
+++ b/src/scss/utilities/_size.scss
@@ -44,4 +44,4 @@ $iota-utils-size-breakpoints: $iota-global-breakpoints;
 $iota-utils-size-namespace: '';
 
 
-@import 'node_modules/iotacss/utilities/size';
+@import '~iotacss/utilities/size';
