--- a/src/scss/utilities/_text.scss
+++ b/src/scss/utilities/_text.scss
@@ -28,4 +28,4 @@ $iota-utils-text-right-name   : 'right';
 $iota-utils-text-center-name  : 'center';
 
 
-@import 'node_modules/iotacss/utilities/text';
+@import '~iotacss/utilities/text';
