--- a/src/scss/utilities/_transform.scss
+++ b/src/scss/utilities/_transform.scss
@@ -29,4 +29,4 @@ $iota-utils-transform-uppercase-name  : 'uppercase';
 $iota-utils-transform-lowercase-name  : 'lowercase';
 
 
-@import 'node_modules/iotacss/utilities/transform';
+@import '~iotacss/utilities/transform';
