--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -42,6 +42,7 @@ $iota-components-button-var-button: $iota-global-components-namespace + $iota-co
   background: $iota-components-button-background;
   border-radius: 3px;
   padding: 12px 16px;
+  min-width: 100px;
 }
 
 .#{$iota-components-button-var-button}--primary {
