--- a/src/scss/utilities/_align.scss
+++ b/src/scss/utilities/_align.scss
@@ -29,4 +29,4 @@ $iota-utils-align-middle-name   : 'middle';
 $iota-utils-align-baseline-name : 'baseline';
 
 
-@import 'node_modules/iotacss/utilities/align';
+@import '~iotacss/utilities/align';
