--- a/src/scss/utilities/_bgcolor.scss
+++ b/src/scss/utilities/_bgcolor.scss
@@ -16,4 +16,4 @@ $iota-utils-bgcolor-names: ();
 $iota-utils-bgcolor-namespace: 'bgcolor-';
 
 
-@import 'node_modules/iotacss/utilities/bgcolor';
+@import '~iotacss/utilities/bgcolor';
