--- a/src/scss/utilities/_position.scss
+++ b/src/scss/utilities/_position.scss
@@ -29,4 +29,4 @@ $iota-utils-position-relative-name  : 'relative';
 $iota-utils-position-static-name    : 'static';
 
 
-@import 'node_modules/iotacss/utilities/position';
+@import '~iotacss/utilities/position';
