--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+@import '~open-color/open-color.scss';
+
 @import 'settings/core';
 
 @import 'tools/core';
@@ -12,15 +14,24 @@
 @import 'objects/grid';
 @import 'objects/list';
 @import 'objects/media';
+@import 'objects/tabs';
 @import 'objects/type';
+@import 'objects/well';
+
+@import 'objects/hero';
+@import 'objects/level';
+@import 'objects/main_navigation';
 
 @import 'components/button';
+@import 'components/label';
+@import 'components/stickynav';
 
 @import 'utilities/align';
 @import 'utilities/bgcolor';
 @import 'utilities/clearfix';
 @import 'utilities/color';
 @import 'utilities/display';
+@import 'utilities/elevation';
 @import 'utilities/float';
 @import 'utilities/margin';
 @import 'utilities/opacity';
