--- a/src/scss/settings/_core.scss
+++ b/src/scss/settings/_core.scss
@@ -7,7 +7,7 @@
  * Type: Unitless Number / List
  */
 
-$iota-global-columns: 2, 3, 6;
+$iota-global-columns: 2, 3, 4;
 
 
 /**
@@ -43,7 +43,7 @@ $iota-global-gutter-default: 12px;
  * Type: Boolean
  */
 
-$iota-global-flex: false;
+$iota-global-flex: true;
 
 
 /**
