--- a/src/scss/objects/_container.scss
+++ b/src/scss/objects/_container.scss
@@ -50,7 +50,9 @@ $iota-objs-container-size-default: 1000px;
  * Type: Map
  */
 
-$iota-objs-container-size-extra: ();
+$iota-objs-container-size-extra: (
+  narrow: 840px
+);
 
 
 @import '~iotacss/objects/container';
