:lipstick: Page header details

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,8 +22,10 @@
 @import 'objects/level';
 @import 'objects/main_navigation';
 
+@import 'components/avatar';
 @import 'components/button';
 @import 'components/label';
+@import 'components/nameplate';
 @import 'components/stickynav';
 
 @import 'utilities/align';
