--- a/src/scss/utilities/_bgcolor.scss
+++ b/src/scss/utilities/_bgcolor.scss
@@ -22,3 +22,16 @@ $iota-utils-bgcolor-namespace: 'bgcolor-';
 
 
 @import '~iotacss/utilities/bgcolor';
+
+
+.u-gradient-purplin {
+  background: #6a3093;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #a044ff, #6a3093); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.u-gradient-deep-purple {
+  background: #673AB7;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #512DA8, #673AB7);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #512DA8, #673AB7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
