--- a/src/scss/utilities/_color.scss
+++ b/src/scss/utilities/_color.scss
@@ -13,7 +13,10 @@ $iota-utils-color-names: (
   menu: $oc-gray-7,
   button: $oc-gray-7,
   caption: $oc-gray-7,
-  disabled: $oc-gray-5
+  disabled: $oc-gray-5,
+  gray-0: $oc-gray-0,
+  gray-1: $oc-gray-1,
+  gray-2: $oc-gray-2
 );
 
 
