--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -43,6 +43,7 @@ $iota-components-button-var-button: $iota-global-components-namespace + $iota-co
   border-radius: 3px;
   padding: 12px 16px;
   min-width: 100px;
+  font-weight: 600;
 }
 
 .#{$iota-components-button-var-button}--primary {
@@ -56,4 +57,10 @@ $iota-components-button-var-button: $iota-global-components-namespace + $iota-co
 .#{$iota-components-button-var-button}--block {
   display: block;
   width: 100% !important;
+}
+
+.#{$iota-components-button-var-button}--outline {
+  border: 1px solid $oc-gray-3;
+  background: transparent;
+  color: inherit;
 }
